--- a/posts/templates/posts/_nav.html
+++ b/posts/templates/posts/_nav.html
@@ -13,7 +13,7 @@
       </li>
       
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">MyPage</a>
+        <a class="nav-link" href="#">MyPage</a>
       </li>
     </ul>
   </div>
