--- a/posts/templates/posts/form.html
+++ b/posts/templates/posts/form.html
@@ -10,9 +10,12 @@
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {% bootstrap_form post_form %}
+    {% if image_form %}
+        {% bootstrap_form image_form show_label=False %}
+    {% endif %}
     <!--<button type="submit" class="btn btn-primary">Submit</button>-->
     <!--<button type="reset" class="btn btn-outline-primary">Cancel</button>-->
-    <!--<a href="{% url 'posts:list' %}" class="btn btn-info">BACK</a>-->
+    <!--<a href="{# url 'posts:list' #}" class="btn btn-info">BACK</a>-->
     
     {% buttons submit='Submit' reset='Cancel' %}{% endbuttons %}
     <a href="{% url 'posts:list' %}" class="btn btn-info">BACK</a>
