--- a/posts/templates/posts/_nav.html
+++ b/posts/templates/posts/_nav.html
@@ -8,13 +8,27 @@
   </button>
   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'posts:create' %}">New</a>
-      </li>
-      
-      <li class="nav-item">
-        <a class="nav-link" href="#">MyPage</a>
-      </li>
+      {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="#">{{ user.username }}님</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'posts:create' %}">New</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">MyPage</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
+        </li>
+      {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'accounts:signup' %}">Sign up</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+        </li>
+      {% endif %}
     </ul>
   </div>
 </nav>
