--- a/posts/templates/posts/_post.html
+++ b/posts/templates/posts/_post.html
@@ -1,5 +1,8 @@
 <div class="col-10 my-3">
     <div class="card">
+        <div class="card-header">
+            <h5 class="card-text">{{ post.user }}</h5>
+        </div>
         {% if post.image_set %}
             <div id="post{{post.pk}}" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
@@ -23,11 +26,13 @@
         {% endif %}
         <div class="card-body">
             <p class-"card-text">{{ post.content }}</p>
-            <a href="{% url 'posts:update' post.pk %}" class="btn btn-warning">수정</a>
-            <form action="{% url 'posts:delete' post.pk %}" method = "POST" style="display:inline;">
-                {% csrf_token %}
-                <input type="submit" value="삭제" class="btn btn-danger">
-            </form>
+            {% if request.user == post.user %}
+                <a href="{% url 'posts:update' post.pk %}" class="btn btn-warning">수정</a>
+                <form action="{% url 'posts:delete' post.pk %}" method = "POST" style="display:inline;">
+                    {% csrf_token %}
+                    <input type="submit" value="삭제" class="btn btn-danger">
+                </form>
+            {% endif %}
         </div>
     </div>
 </div>
