--- a/posts/templates/posts/_nav.html
+++ b/posts/templates/posts/_nav.html
@@ -1,4 +1,4 @@
-<nav class="sticky-top navbar navbar-expand-lg navbar-light bg-light px-5">
+<nav class="sticky-top navbar navbar-expand-lg navbar-dark bg-dark px-5">
   <a class="navbar-brand" href="{% url 'posts:list' %}">
     <i class="fab fa-instagram"> | Instagram</i>
   </a>
@@ -6,17 +6,22 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+  <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+    <div></div>
+    
+    <ul class="navbar-nav">
+        <li class="nav-item">
+          <span class="nav-text text-light" href="#">{{ user.username }}님 반갑습니다</span>
+        </li>
+    </ul>
+        
     <ul class="navbar-nav">
       {% if user.is_authenticated %}
-        <li class="nav-item">
-          <a class="nav-link" href="#">{{ user.username }}님</a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'posts:create' %}">New</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">MyPage</a>
+          <a class="nav-link" href="{% url 'people' user.username %}">MyPage</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
