--- a/accounts/templates/accounts/people.html
+++ b/accounts/templates/accounts/people.html
@@ -1,6 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1 class="text-center">{{ people.username }}'s Profile</h1>
+<div class="row justify-content-end">
+    <div>
+        {% if request.user == people %}
+            <a href="{% url 'accounts:update' %}" class="btn btn-outline-secondary">회원 수정</a>
+            <a href="{% url 'accounts:password' %}" class="btn btn-outline-secondary">비밀번호 변경</a>
+        {% endif %}
+    </div>
+</div>
+<hr>
+
 <h3 class="text-center">{{ people.username }}이 작성한 게시글</h3>
 <div class="row">
     {% for post in people.post_set.all|dictsortreversed:"pk" %}
