--- a/accounts/templates/accounts/password.html
+++ b/accounts/templates/accounts/password.html
@@ -4,6 +4,6 @@
     <form action="{% url 'accounts:password' %}" method='POST'>
         {% csrf_token %}
         {% bootstrap_form password_form %}
-        <input type="submit" value="수정"/>
+        <input type="submit" value="수정" class="btn btn-warning"/>
     </form>
 {% endblock %}
