--- a/accounts/templates/accounts/update.html
+++ b/accounts/templates/accounts/update.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 {% block content %}
-    <form action="{% url 'accounts:update' %}" method='POST'>
+    <form action="" method='POST'>
         {% csrf_token %}
         {% bootstrap_form update_form %}
         <input type="submit" value="수정"/>
