--- a/insta/templates/base.html
+++ b/insta/templates/base.html
@@ -14,6 +14,7 @@
 <body>
     {% include 'posts/_nav.html' %}
     <div class="container">
+        <h3 class="text-primary">세계제일미남세민쮸</h3>
         {% block content %}
         {% endblock %}
     </div>
