--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
+{% load socialaccount %}
 {% block content %}
 <h1>로그인 페이지</h1>
 <form action={% url 'accounts:login' %} method='POST'>
@@ -8,5 +9,5 @@
     <button type="submit" class="btn btn-primary">로그인</button>
     <!--<input type="submit" value="Submit"/>-->
 </form>
-
+<a href="{% provider_login_url 'kakao' method='oauth2' %}" class="btn btn-warning">카카오로그인</a>
 {% endblock %}
